# pizzabot

./: README.md
backend/: pyproject.toml  requirements.txt
backend/app/: config.py  deps.py  graph.py  llm.py  main.py  menu.py  schemas.py  state.py  vectorstore.py
backend/app/routers/: chat.py  ingest.py  order.py
frontend/: .gitignore  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: ChatInput.jsx  ChatWindow.jsx  MessageList.jsx  OrderSummary.jsx
